# advent-of-code

./: .gitignore  01.py  01_a.py  README.md  justfile  pyproject.toml
2015/: 01_a.py  01_b.py  02_a.py  08_a.py  21_a.py
2021/: 14_a.py
2022/: .flake8  .pre-commit-config.yaml  01_a.py  01_b.py  02_a.py  02_b.py  03_a.py  03_b.py  04_a.py  04_b.py  05_a.py  05_b.py  05_example.txt  05_head.txt  06_a.py  06_b.py  07_a.py  07_b.py  08_a.py  08_b.py  09_a.py  09_b.py  25_b.py  pyproject.toml
2023/: 01_a.py  01_b.py  02_a.py  02_b.py  03_a.py  03_b.py
2024/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
classes/: template.py  utilities.py
scripts/: art.txt  bootstrap.py  runner.py
utils/: base_class.py  utilities.py
