[tool.poetry]
name = "advent-of-code"
version = "0.2.0"
description = "Advent of Code"
authors = ["Stephan Garland <stephan.marc.garland@gmail.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.11"
more-itertools = "^9.0.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
advent-of-code-data = "^2.0.1"
anytree = "^2.8.0"
nested-dict = "^1.61"
fastcache = "^1.1.0"
flakeheaven = "^3.3.0"

[tool.flakeheaven]
max-complexity = 12
format = "grouped"
max_line_length = 88
show_source = true

[tool.flakeheaven.plugins]
pyflakes = ["+*", "-F401"]
pycodestyle = ["+*", "-W503", "-E203"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
