[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "Stephan Garland", email = "stephan.marc.garland@gmail.com"},
]
license = {text = "MPL-2.0"}
requires-python = "<4.0,>=3.11"
dependencies = [
    "more-itertools>=10.0.0,<11.0.0",
    "mypy>=1.7.1,<2.0.0",
    "advent-of-code-data>=2.0.1,<3.0.0",
    "anytree>=2.8.0,<3.0.0",
    "nested-dict>=1.61,<2.0",
    "fastcache>=1.1.0,<2.0.0",
    "ruff>=0.8.1,<1.0.0",
]
name = "advent-of-code"
version = "0.2.0"
description = "Advent of Code"
